--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,126 @@
-/* You can add global styles to this file, and also import other style files */
+
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  min-width: 422px;
+  margin: 0;
+  padding: 0;
+}
+
+
+/* ---- typography ---- */
+
+body {
+  color: rgb(255, 255, 255);
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 16px;
+  line-height: 147%;
+}
+
+h1, h2 {
+  margin: 0 0 20px 0;
+} 
+
+h3, h4, p {
+  margin: 0 0 10px 0;
+}
+
+
+
+/* ---- layout ---- */
+
+#site-header, #site-footer{
+  position: sticky;
+  background: rgb(80, 80, 80);
+}
+#site-header {
+  top: 0;
+  border-bottom: 1px solid black;
+}
+#site-footer {
+  bottom: 0;
+  border-top: 1px solid black;
+  padding: 15px;
+}
+#site-footer a {
+  text-decoration: none;
+  color: white;
+}
+#site-main {
+  background-color: rgb(0, 0, 0);
+}
+
+.container {
+  margin: 0 20px;
+}
+
+.section {
+  margin-bottom: 20px;
+  padding-top: 20px;
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 728px;
+    margin: 0 auto;
+  }
+}
+/* Form */
+
+.field input{
+  width: 90%;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+form {
+  padding-top: 20px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+form .validation {
+  color: red;
+}
+
+form button {
+  border: 1px solid rgb(39, 38, 38);
+  padding: 5px 0;
+  font-size: 16px;
+  width: 90%;
+}
+
+form button:hover {
+  box-shadow: inset 0 0 10px;
+}
+
+/* ---- components ---- */
+
+/* Nav */
+
+.site-nav, #site-footer > .container {
+  display: flex;
+  justify-content: space-between;
+  max-height: 100px;
+}
+.site-nav a {
+  height: 100%;
+  line-height: 50px;
+  padding: 0 20px;
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+}
+.site-nav a:hover {
+  color:rgb(255, 196, 0);
+  cursor: move;
+}
+
+
