--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -2,4 +2,5 @@
   <p>{{comment.content}}</p>
   <p>by {{comment.owner.username}}</p>
   <p>{{comment.date}}</p>
+  <button (click)="handleRemove(comment)">-</button>
 </div>
