finished home screen, changed css layout and palette, added profile page content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,56 +1,76 @@
 <header id="site-header" [ngClass]="{'screen-mode': screenMode}">
-  <div class="container">   
-
-    <nav class="site-nav">
-      <div class="nav-container">
-        <a [routerLink]="['/']">Home</a>
-      </div>
-      <!-- AUTH -->
-      <div [ngClass]="{'is-user': user, 'is-anon': anon}">
-        <div *ngIf="loading">
-          <span class="username text">loading...</span>
-        </div>
-        
-        <ng-container *ngIf="!loading && anon">
-          <div class="blur"></div>
-          <div class="nav-container">
-            <a (click)="toggleLogInForm()">Log In</a>
-            <app-log-in class="auth-container" *ngIf="logInActive"></app-log-in>
-          </div>
-          
-          <div class="nav-container">
-            <a (click)="toggleSignUpForm()">Sign Up</a>
-            <app-sign-up class="auth-container" *ngIf="signUpActive"></app-sign-up>
-          </div>         
-        </ng-container>
-        
-        <div *ngIf="!loading && !!user">
-          <a [routerLink]="['/users', user._id]">{{user.username}}</a>
-          <a (click)="logout()">logout</a>
-        </div>
-        
-      </div>
-      <!--  -->
-
-    </nav>
+  
+  <nav class="site-nav container">
+    <!--  ===================================== Dropdown menu ======================================== -->
+    
+    
+    <div class="nav-container">
+      <a [routerLink]="['/']">Home</a>
     </div>
-  </header>
-  
-  <div id="site-main">
-    <router-outlet></router-outlet>
-    <a (click)="screenModeToggle()"  [ngClass]="{'screen-mode-back': !screenMode}">Back</a>
-  </div>
-  
-  <footer id="site-footer" [ngClass]="{'screen-mode': screenMode}">
-    <div class="container">
-      <div class="footer-container">
-        &copy; Matuki 2018
+    <!-- AUTH -->
+    <div [ngClass]="{'is-user': user, 'is-anon': anon}">
+      <div *ngIf="loading">
+        <span class="username text">loading...</span>
       </div>
-      <div class="footer-container">
-          <a (click)="screenModeToggle()"  [ngClass]="{'screen-mode-back': screenMode}">Display mode</a>
+      
+      <ng-container *ngIf="!loading && anon">
+        <div class="dropdown nav-container">
+          <a class="dropbtn">Not logged in?</a>
+          <div class="dropdown-content auth-container">
+            <div>
+              <a (click)="toggleLogInForm()">Log In</a>
+              <app-log-in *ngIf="logInActive"></app-log-in>
+            </div>
+            
+            <div>
+              <a (click)="toggleSignUpForm()">Sign Up</a>
+              <app-sign-up *ngIf="signUpActive"></app-sign-up>
+            </div>         
+          </div>
         </div>
-      <div class="footer-container">
-        <a *ngIf="admin" [routerLink]="['/admin']">Admin Panel</a>
+      </ng-container>
+      
+      
+    </div>
+    
+    <!-- Admin -->
+    
+    <div *ngIf="!loading && !!user">
+      <div class="dropdown nav-container">
+        <a class="dropbtn">{{user.username}} ></a>
+        <div class="dropdown-content">
+          <ng-container *ngIf="admin">
+              <div>
+              <a (click)="screenModeToggle()"  [ngClass]="{'screen-mode-back': screenMode}">Hide navbar</a>
+            </div>
+            <div>
+              <a [routerLink]="['/admin']">Control Panel</a>
+            </div>
+          </ng-container>
+          <div>
+            <a [routerLink]="['/users', user._id]">My profile</a>
+          </div>
+          <div>
+            <a (click)="logout()">Logout</a>
+          </div>
+        </div>
       </div>
+    </div>
+    
+    <!-- ============================================================================== -->
+    
+  </nav>
+</header>
+
+<div id="site-main">
+  <router-outlet></router-outlet>
+  <a (click)="screenModeToggle()"  [ngClass]="{'screen-mode-back': !screenMode}">Back</a>
+</div>
+
+<!-- <footer id="site-footer" [ngClass]="{'screen-mode': screenMode}">
+  <div class="container">
+    <div class="footer-container">
+      &copy; Matuki 2018
+    </div>
   </div>
-</footer>
+</footer> -->
