--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,3 +1,7 @@
+<ng-container *ngIf="!user">
+    Loading...
+  </ng-container>
+
 <div *ngIf="user">
     <a [routerLink]="['/users', user._id]">{{user.username}}</a>
   </div>
