--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,18 +1,85 @@
-.nav-container, .footer-container {
+/* DROPDOWN */
+.dropbtn {
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
   display: inline-block;
 }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #490000;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  text-align: center;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  text-decoration: underline;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #490000;
+}
+
+/* Nav */
+
+.site-nav{
+  display: flex;
+  /* justify-content: space-around; */
+  flex-wrap: wrap;
+  max-height: 100px;
+}
+.site-nav a {
+  height: 100%;
+  line-height: 50px;
+  padding: 0 20px;
+  display: inline-block;
+  text-decoration: none;
+}
+.site-nav a:hover {
+  color:rgb(255, 196, 0);
+  cursor: move;
+}
+
+.nav-container {
+  display: inline-block;
+}
+
+.nav-container a {
+  width: 100%;
+  color: white;
+}
+
 .auth-container {
-  position:fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  /* transform: translateX(-80px);  */
-  border: 2px solid black;
-  width: 50%;
-  height: 50%;
-  background: rgb(80, 80, 80);
-  border-top:rgb(80, 80, 80);
+  width: 400px;
+  margin-right: 10px;
 }
 .screen-mode, .screen-mode-back {
   display: none;
+}
+
+@media (max-width: 600px) {
+  .dropdown-content {
+    width: 300px;
+  }
 }
