--- a/src/app/components/beer-card/beer-card.component.css
+++ b/src/app/components/beer-card/beer-card.component.css
@@ -1,8 +1,57 @@
 .card {
+  border-radius: 10px;
+  padding: 20px;
+  width: 500px;
+  text-transform: uppercase;
+  color:#310303;
+  background: white;
+  margin: 0 auto;
+}
+
+.box {
+  padding-top: 5px;
+  margin-bottom: 5px;
+}
+
+.beer-title h2 {
+  width: 85%;
+}
+
+.beer-title .beer-color {
+  border-radius: 50%;
+  width:30px;
+  height: 30px;
+}
+
+.beer-info-left, .beer-info-right, .beer-title > * {
+  display: inline-block;
+}
+
+.beer-info-right {
+  float: right;
+}
+
+@media (max-width: 800px) {
+  .card {
+    width: 400px;
+  }
+}
+
+
+
+
+
+
+
+
+/* .card {
   padding: 20px;
   text-transform: uppercase;
   color:rgb(230, 230, 230);
-  text-shadow: 0 0 10px rgb(65, 61, 61);
+  text-shadow: 0 0 8px rgb(0, 0, 0);
+}
+.color-bar {
+  height: 50px;
 }
 .beer-prices {
   float: right;
@@ -12,4 +61,4 @@
   display:inline-block;
   margin-right: 10px;
 }
-
+ */
