--- a/src/app/pages/admin-page/admin-page.component.css
+++ b/src/app/pages/admin-page/admin-page.component.css
@@ -1,23 +1,40 @@
 .grid {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
+  padding: 20px;
+  background: rgb(105, 0, 0, 0.8);
 }
 .grid-item {
-  width: 400px;
-  max-height: 500px;
+  border: 1px solid black;
+  max-width: 400px;
+  max-height: 300px;
   padding: 10px 0;
   margin-bottom: 20px;
   overflow-y: scroll;
   overflow-x: hidden;
+  box-shadow: 0 0 10px black;
 } 
+
+.grid-item.form {
+  max-height: none;
+}
 
 .item {
   border: 1px solid rgb(0, 0, 0, 0.2);
   width: 400px;
   padding: 15px;
   margin-bottom: 5px;
-  background-color:white;
+  background-color:rgb(255, 255, 255);
   color: black;
   font-size: 150%;
 }
+
+@media (max-width: 1300px) {
+  .grid {
+    flex-wrap: wrap;
+  }
+
+}
+
+
+
