--- a/src/app/pages/beer-detail-page/beer-detail-page.component.css
+++ b/src/app/pages/beer-detail-page/beer-detail-page.component.css
@@ -6,11 +6,52 @@ h2 {
 
 hr {
   width: 80%;
-  border: 1px solid rgba(0, 0, 0, 0.3);
 }
-
 .comment-section {
   height: 250px;
   overflow-y: scroll;
   overflow-x: hidden;
+}
+
+.field {
+  width: 100%;
+}
+.block {
+  padding: 20px 0;
+  background: rgba(82, 0, 0, 0.8);
+  border: 1px solid black;  
+  width: 100%;
+}
+.top-section {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  margin-bottom: 20px;
+}
+.bottom-section {
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.fav-btn-active {
+  background-image: url('http://icons.iconarchive.com/icons/hopstarter/soft-scraps/256/Button-Favorite-icon.png') !important;
+}
+.fav-btn {
+  margin-left: 50px;
+  padding: 20px;
+  background: none;
+  border: none;
+  width: 50px;
+  height: 50px;
+  background-image: url('https://cdn.iconscout.com/public/images/icon/free/png-512/star-bookmark-favorite-shape-rank-3755d66093fb5cc1-512x512.png');
+  background-size: 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.fav-btn:hover {
+  background-size: 100%;
+  cursor: move;
+}
+
+
+.container {
+  margin: 0 auto;
 }
