--- a/src/app/pages/home-page/homePage.component.css
+++ b/src/app/pages/home-page/homePage.component.css
@@ -4,18 +4,18 @@
   flex-wrap: wrap; 
 }
 .grid-item {
-  width: 600px;
+  border: 1px solid rgb(255, 255, 255, 0.3);
+  border-radius: 10px;
   margin: 15px;
-  border: 3px outset rgb(56, 54, 54);
-  box-shadow: 0 0 30px rgb(129, 129, 129);
+  border: 1px solid #DFD0CF;
+  box-shadow: 5px 5px 10px #DFD0CF;
 }
 .grid-item a {
   text-decoration: none;
   font-size: 25px;
 }
-
-@media (max-width: 600px) {
-  .home-page-card {
-    font-size: 70%;
+@media (max-width: 800px) {
+  .grid-item {
+    margin: 15px auto;
   }
 }
