--- a/src/app/pages/home-page/homePage.component.html
+++ b/src/app/pages/home-page/homePage.component.html
@@ -1,6 +1,6 @@
 <div class="grid">
   <ng-container *ngFor="let beer of beers">
-    <div class="grid-item" *ngIf="beer.active" [ngStyle]="{ 'background-color': beer.color }">
+    <div class="grid-item" *ngIf="beer.active">
       <a [routerLink]="['/beers', beer._id]">
         <app-beer-card class="home-page-card" [beer]="beer"></app-beer-card>
       </a>
