--- a/src/app/pages/beer-detail-page/beer-detail-page.component.css
+++ b/src/app/pages/beer-detail-page/beer-detail-page.component.css
@@ -1,4 +1,6 @@
 h2 {
+  position: sticky;
+  top: 0;
   text-align: center;
   padding-top: 10px;
   margin-bottom: 15px;
@@ -18,8 +20,9 @@ hr {
 }
 .block {
   padding: 20px 0;
-  background: rgba(82, 0, 0, 0.8);
-  border: 1px solid black;  
+  /* background: rgba(82, 0, 0, 0.8); */
+  background: rgba(43, 3, 3, 0.7);
+  border: 1px solid black;
   width: 100%;
 }
 .top-section {
@@ -54,4 +57,8 @@ hr {
 
 .container {
   margin: 0 auto;
+}
+
+textarea {
+  font-size: 20px;
 }
